--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   display: grid;
   border: 1px solid black;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 10px;
+  /* background-color: #ffffff; */
 }
 
 .grid-element-border {
