--- a/style.css
+++ b/style.css
@@ -1,7 +1,37 @@
+:root {
+  --white: #fcfcfc;
+  --black: #292929;
+  --grey: #858383;
+  --pink: #ffe7e7;
+  --yellow: #fff3b6;
+  --blue: #5ca0d8;
+  --aquamarine: #00FFD4;
+  --crayola: #FF5C69;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body {
+  background-color: var(--yellow);
+  color: var(--blue);
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 1.6;
+  padding: 0 18px;
+  /* footer support */
+  margin-bottom: 100px;
+  font-size: 20px;
+}
+
+/* footer support */
+
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 /* GRID STYLE */
@@ -10,11 +40,177 @@
   width: 600px;
   height: 600px;
   display: grid;
-  border: 1px solid black;
+  border: 1px solid var(--black);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 10px;
-  /* background-color: #ffffff; */
 }
 
 .grid-element-border {
-  border: 1px solid black;
+  border: 1px solid var(--black);
+}
+
+/* HEADER */
+
+.header {
+  text-align: center;
+  padding: 60px 0;
+}
+
+.title {
+  font-size: 64px;
+  line-height: 1.2;
+}
+
+/* MAIN SECTION */
+
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+}
+
+/* SETTINGS */
+
+.settings-section {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+button,
+input {
+  width: 100%;
+  color: inherit;
+  outline: none;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: var(--yellow);
+  border: 1px solid var(--blue);
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.20) 0px 2px 10px;
+}
+
+button,
+input[type='color'] {
+  transition: transform 0.1s ease-in-out;
+}
+
+button:hover,
+input[type='color']:hover {
+  transform: scale(1.05);
+}
+
+input[type='color'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  width: 80px;
+  height: 80px;
+}
+
+input[type='color']::-webkit-color-swatch {
+  border-radius: 50%;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 10px;
+}
+
+input[type='color']::-moz-color-swatch {
+  border-radius: 50%;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 10px;
+}
+
+input[type='range'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: var(--yellow);
+  opacity: 0.8;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+
+}
+
+input[type='range']:hover {
+  opacity: 1;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+  height: 10px;
+  border: 1px solid var(--blue);
+  border-radius: 5px;
+  background-color: var(--yellow);
+  box-shadow: rgba(0, 0, 0, 0.20) 0px 2px 10px;
+}
+
+input[type='range']::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: var(--blue);
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  margin-top: -8px;
+  transition: transform 0.1s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.20) 0px 2px 10px;
+}
+
+input[type='range']::-webkit-slider-thumb:hover {
+  transform: scale(1.05);
+}
+
+#sliderLabel {
+  font-size: 20px;
+  margin-bottom: -8px;
+}
+
+/* FOOTER */
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  font-size: inherit;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: var(--blue);
+}
+
+a:hover {
+  font-weight: 500;
+}
+
+a:active {
+  font-weight: 500;
+}
+
+a:visited {
+  color: var(--grey);
+}
+
+.fa-github {
+  color: var(--grey);
+  transition: transform 0.1s ease-in-out;
+}
+
+.fa-github:hover {
+  transform: scale(1.1);
 }
