--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Work+Sans&display=swap");
+
 :root {
   --white: #fcfcfc;
   --black: #292929;
@@ -5,91 +7,76 @@
   --pink: #ffe7e7;
   --yellow: #fbedaa;
   --blue: #4d97d3;
-  --aquamarine: #00FFD4;
-  --crayola: #FF5C69;
+  --aquamarine: #00ffd4;
+  --crayola: #ff5c69;
+}
+
+html {
+  box-sizing: border-box;
 }
 
 * {
-  box-sizing: border-box;
+  box-sizing: inherit;
   padding: 0;
   margin: 0;
 }
 
 body {
+  font-size: 18px;
   background-color: var(--yellow);
   color: var(--blue);
-  font-family: 'Poppins', Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  line-height: 1.6;
-  padding: 0 18px;
-  /* footer support */
-  margin-bottom: 100px;
-  font-size: 20px;
+  font-family: "Poppins", sans-serif;
 }
 
-/* footer support */
-
-html {
-  position: relative;
-  min-height: 100%;
+.content-container {
+  max-width: 1320px;
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-/* GRID STYLE */
+header {
+  font-size: 34px;
+  display: flex;
+  justify-content: center;
+}
 
+/* grid style */
 .grid {
   width: 600px;
   height: 600px;
   display: grid;
   border: 1px solid var(--black);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 10px;
+  margin: 0 auto;
 }
 
 .grid-element-border {
   border: 1px solid var(--black);
 }
 
-.grid-section {
-  order: 2;
-}
+/* main section */
 
-/* HEADER */
-
-.header {
-  text-align: center;
-  padding: 36px 0;
-}
-
-.title {
-  font-size: 64px;
-  line-height: 1.2;
-}
-
-/* MAIN SECTION */
-
-.main-container {
+main {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-}
-
-.left {
-  order: 1;
-}
-
-.right {
-  order: 3;
+  gap: 30px;
 }
 
 .settings-section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  gap: 20px;
-  width: 170px;
+  justify-content: space-between;
 }
 
+.colorLabel {
+  margin-bottom: -14px;
+}
+
+/* buttons and inputs */
 button,
 input {
   width: 100%;
@@ -105,65 +92,64 @@ button {
   background-color: var(--yellow);
   border: 1px solid var(--blue);
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.20) 0px 2px 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 10px;
 }
 
 button,
-input[type='color'] {
+input[type="color"] {
   transition: transform 0.1s ease-in-out;
 }
 
 button:hover,
-input[type='color']:hover {
+input[type="color"]:hover {
   transform: scale(1.05);
 }
 
-input[type='color'] {
+input[type="color"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background-color: transparent;
   border: none;
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
 }
 
-input[type='color']::-webkit-color-swatch {
+input[type="color"]::-webkit-color-swatch {
   border-radius: 50%;
   border: none;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 10px;
 }
 
-input[type='color']::-moz-color-swatch {
+input[type="color"]::-moz-color-swatch {
   border-radius: 50%;
   border: none;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 10px;
 }
 
-input[type='range'] {
+input[type="range"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background-color: var(--yellow);
   opacity: 0.8;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
-
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
-input[type='range']:hover {
+input[type="range"]:hover {
   opacity: 1;
 }
 
-input[type='range']::-webkit-slider-runnable-track {
+input[type="range"]::-webkit-slider-runnable-track {
   height: 10px;
   border: 1px solid var(--blue);
   border-radius: 5px;
   background-color: var(--yellow);
-  box-shadow: rgba(0, 0, 0, 0.20) 0px 2px 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 10px;
 }
 
-input[type='range']::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   background-color: var(--blue);
@@ -172,45 +158,26 @@ input[type='range']::-webkit-slider-thumb {
   border-radius: 50%;
   margin-top: -8px;
   transition: transform 0.1s ease-in-out;
-  box-shadow: rgba(0, 0, 0, 0.20) 0px 2px 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 10px;
 }
 
-input[type='range']::-webkit-slider-thumb:hover {
+input[type="range"]::-webkit-slider-thumb:hover {
   transform: scale(1.05);
 }
 
-#sliderLabel {
-  margin-bottom: -8px;
-}
-
-.colorLabel {
-  margin-bottom: -10px;
-}
-
-/* FOOTER */
-
+/* footer */
 footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  font-size: inherit;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 10px 0;
+  font-size: 16px;
 }
 
+/* link style */
 a {
   text-decoration: none;
   color: var(--blue);
 }
 
-a:hover {
-  font-weight: 500;
-}
-
+a:hover,
 a:active {
   font-weight: 500;
 }
@@ -229,3 +196,63 @@ a:visited {
 }
 
 /* media queries */
+@media screen and (max-width: 790px) {
+  body {
+    padding: 10px;
+  }
+  .settings-section {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .settings-section > * {
+    width: 160px;
+  }
+
+  main {
+    flex-direction: column;
+    gap: 2px;
+  }
+
+  .colorLabel,
+  #sliderLabel {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .grid {
+    width: 500px;
+    height: 500px;
+  }
+
+  .grid-section {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .grid {
+    width: 400px;
+    height: 400px;
+  }
+
+  header {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .grid {
+    width: 300px;
+    height: 300px;
+  }
+
+  header {
+    font-size: 20px;
+  }
+
+  footer {
+    font-size: 12px;
+  }
+}
